--- a/src/assets/css/app_lesson_one.css
+++ b/src/assets/css/app_lesson_one.css
@@ -12,7 +12,13 @@ html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
 }
+.header-page{
+  text-align: center;
+  width: 100%;
+  font-size:2rem;
+  font-weight: bold;
 
+}
 /* Sections
    ========================================================================== */
 
